test/negative/t28.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel
  {| axiom ax: forall x: float list.
    match x with
    | y :: ys -> y = 2 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

(*@ axiom ... *)
File "t28.mli", line 13, characters 17-18:
Error: This term has type `float' but a term was expected of type `integer'.
